v2.0/secure-authc/request-authentication-dc.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
 name: customerdc
 namespace: secure-authc
spec:
  selector:
    matchLabels:
      app: customerdc
  jwtRules:
  - issuer: "testing@secure.istio.io"
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.5/security/tools/jwt/samples/jwks.json"
