v2.0/secure-authc/customer-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: customerdc
spec:
  replicas: 1
  selector:
    deployment-config.name: customerdc
  strategy:
    resources: {}
  template:
    metadata:
      labels:
        deployment-config.name: customerdc
        app: customerdc
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - image: quay.io/redhattraining/ossm-customer:1.0
        name: default-container
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
