v2.0/secure-authc/jwt-preference-policy.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "jwt-preference"
  namespace: secure-authc
spec:
  selector:
    matchLabels:
      app: preference
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["testing@secure.istio.io/testing@secure.istio.io"]
    to:
    - operation:
        methods: ["GET"]
        ports: ["8080"]
